--- a/.github/workflows/deploy-jekyll.yml
+++ b/.github/workflows/deploy-jekyll.yml
@@ -10,7 +10,11 @@ jobs:
     runs-on: ubuntu-16.04
     steps:
     - uses: actions/checkout@v2
-    
+    # JDK  
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
     # Standard usage
     - uses:  helaili/jekyll-action@2.0.0
       env:
