--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,6 @@ asciidoctor:
     - idseparator=_
     - source-highlighter=coderay
     - icons=font
-gems:
+plugins:
   - asciidoctor-diagram
   - jekyll-asciidoc
